Clever_snake.html

--- a/Clever_snake.html
+++ b/Clever_snake.html
@@ -22,7 +22,7 @@
           <td>3.0.0</td>
           <td><a href="https://drive.google.com/uc?export=download&id=1EjUGSRP3W-be56mKmTrxM7sRoEZEkwVA">Clever_snake.zip</a></td>
           <td>43 Mб</td>
-          <td>1. Добавлен калькулятор</td>
+          <td>Добавлен калькулятор</td>
             </tr>
       </table>
     </p>
