Clever_snake.html

--- a/Clever_snake.html
+++ b/Clever_snake.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
   </head>
-  <body style="text-align: center;">
+  <body style="background-color: rgb(200,255,200);text-align: center;">
     <script src="script.js"></script>
     <h1 style="color: green;">
       Welcome to Clever snake installer
@@ -18,34 +18,71 @@
           <td>Файл</td>
           <td>Вес файла</td>
           <td>Что нового</td>
+          <td>Кол - во строчек кода</td>
         </tr><tr>
           <td>3.0.0</td>
-          <td><a href="https://drive.google.com/uc?export=download&id=1EjUGSRP3W-be56mKmTrxM7sRoEZEkwVA">Clever_snake.zip</a></td>
+          <td><a href="https://drive.google.com/uc?export=download&id=1EjUGSRP3W-be56mKmTrxM7sRoEZEkwVA">Clever_snake.zip</a> 
+          </td>
           <td>43 Mб</td>
-          <td>Добавлен калькулятор</td>
-            </tr>
+          <td>Добавлен калькулятор и 3 новых модуля</td>
+          <td>608</td>
+        </tr><tr>
+          <td>2.2.0</td>
+          <td>
+            <a href="https://drive.google.com/uc?export=download&id=1bh3s4u_oL8ed91XkRl6L8gQpHCHVhSKv">Clever_snake_2_2.zip</a>
+          </td>
+          <td>43 МБ</td>
+          <td>Добавлены 2 кнопки и 1 новый модуль для вывода диалоговова окна</td>
+          <td>540</td>
+        </tr><tr>
+          <td>2.1.0</td>
+          <td><a href="https://drive.google.com/uc?export=download&id=1f3bM7QwsXcdN-iQ2pOVJ4zxYbsQuL7fH">Clever_snake_2_1.zip</a>
+          </td>
+          <td>43 Мб</td>
+          <td>Добавлена возможность менять уровни игры, 4 новые кнопки</td>
+          <td>528</td>
+        </tr><tr>
+          <td>2.0.0</td>
+          <td><a href="https://drive.google.com/uc?export=download&id=11auEiXTySQv1DAanUlH7ZJQv303QMAd9">Clever_snake_2.zip</a>
+          </td>
+          <td>43 Мб</td>
+          <td>Добавлены возможности менять цвета игры, менять скорость змеи, изменять счет для победы и множество новых кнопок</td>
+          <td>496</td>
+        </tr><tr>
+          <td>1.0.0</td>
+          <td><a href="https://drive.google.com/uc?export=download&id=1I3Q7D4ZcDTO_GUBAy3kHXUEao5SXHyZ2">Clever_snake1.zip</a>
+          </td>
+          <td>34 Мб</td>
+          <td>-</td>
+          <td>165</td>
+        </tr>
       </table>
     </p>
-    Запуск игры:
-    <br>
-    1. Скачайте файл
-    <br>
-    2. Разархивируйте (желательно используйте 7-zip)
-    <br>
-    3. Нажмите 2 раза по файлу Clever_snake.exe
-    <br>
+    <h3>
+      Запуск игры:
+    </h3>
+    <p style="text-align: left;">
+      <b>1.</b> Скачайте файл
+      <br>
+        <b>2.</b> Разархивируйте (желательно используйте 7-zip)
+      <br>
+          <b>3.</b> Нажмите 2 раза по файлу Clever_snake.exe
+      <br>
+    </p>
     <h1 style="color: red;">
       Важно!!!
     </h1>
-    <br>
-    Не вынимайте файл из папки! Он может работать не корректно.
+    <h3>
+      Не вынимайте файл из папки! Он может работать не корректно.
+    </h3>
     <p>
       <h3>Как обновить</h3>
     </p>
-    <br>
-    1. Скачайте zip файл с более новой версией
-    <br>
-    2. По желанию удалите папку со старой версией
-    <br>
+    <p style="text-align: left;">
+      <b>1.</b> Скачайте zip файл с более новой версией
+      <br>
+      <b>2.</b> По желанию удалите папку со старой версией
+      <br>
+    </p>
   </body>
 </html>
