Clever_snake.html

--- a/Clever_snake.html
+++ b/Clever_snake.html
@@ -31,8 +31,8 @@
           <td>
             <a href="https://drive.google.com/uc?export=download&id=1bh3s4u_oL8ed91XkRl6L8gQpHCHVhSKv">Clever_snake_2_2.zip</a>
           </td>
-          <td>43 МБ</td>
-          <td>Добавлены 2 кнопки и 1 новый модуль для вывода диалоговова окна</td>
+          <td>43 Мб</td>
+          <td>Добавлены 2 кнопки и 1 новый модуль для вывода диалоговова окна, уменьшили количество файлов в папке Clever_snake</td>
           <td>540</td>
         </tr><tr>
           <td>2.1.0</td>
@@ -83,6 +83,21 @@
       <br>
       <b>2.</b> По желанию удалите папку со старой версией
       <br>
+      Если произошла какая - то ошибка удалите прошлый файл и скачайте новый
+    </p>
+    <h3>Советы:</h3>
+    <p style="text-align: left;">
+      1. Как удобнее включать приложение 
+      <br>
+      Создайте текстовый документ на рабочем столе с расширением txt
+      <br>
+      Напишите: cd далее путь к папке Clever_snake (уже разорхивираванной)
+      <br>
+      На следующе строчке напишите start Clever_snake.exe
+      <br>
+      Сохраните файл и поменяйте расшерение с txt на bat
+      <br>
+      Теперь при нажатие на этот файл у вас будет запускаться игра
     </p>
   </body>
 </html>
