--- a/Clever_snake.html
+++ b/Clever_snake.html
@@ -19,8 +19,15 @@
           <td>Вес файла</td>
           <td>Что нового</td>
           <td>Кол - во строчек кода</td>
+          </tr><tr>
+            <td>3.0.0</td>
+            <td><a href="https://drive.google.com/uc?export=download&id=1WzGW7wk407ax68vARQcgjbQW0W33CUnK">Clever_snake3.0.0.zip</a> 
+            </td>
+            <td> 199 Мб </td>
+            <td>Исправлено 2 бага. Добавлено сколько времени длилась игра. Добавлена кнопка Shift (ускоряет змейку). Добавлено звукосопровождение. Добавлено еще 4 новые кнопки. Добавлена возможность создать аккаун и сохранять туда свой прогресс. </td>
+            <td>608</td>
         </tr><tr>
-          <td>3.0.0</td>
+          <td>2.3.0</td>
           <td><a href="https://drive.google.com/uc?export=download&id=1EjUGSRP3W-be56mKmTrxM7sRoEZEkwVA">Clever_snake.zip</a> 
           </td>
           <td>43 Mб</td>
