Clever_snake.html

--- a/Clever_snake.html
+++ b/Clever_snake.html
@@ -20,7 +20,7 @@
           <td>Что нового</td>
           <td>Кол - во строчек кода</td>
           </tr><tr>
-            <td>3.0.0</td>
+            <td>3.0.0 lite</td>
             <td><a href="https://drive.google.com/uc?export=download&id=1WzGW7wk407ax68vARQcgjbQW0W33CUnK">Clever_snake3.0.0.zip</a> 
             </td>
             <td> 199 Мб </td>
